# sample-size-calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  railway.json  render.yaml  server.py
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  deploy.yml  docker.yml  frontend-ci.yml  security.yml  test.yml
backend/: README.md  TESTING.md  pyproject.toml  pytest.ini
backend/app/: __init__.py  api.py  powercalculator.py
backend/tests/: test_api.py  test_powercalculator.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AdvancedSettings.tsx  CorrelationExplainer.css  CorrelationExplainer.tsx  CupedDemo.css  CupedDemo.tsx  ExperimentForm.tsx  Interpretation.tsx  MdeTradeoffChart.tsx  MetricSummary.tsx  PowerCurveChart.tsx
frontend/src/pages/: CupedEducation.css  CupedEducation.tsx
